k8s/microservice3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice3
  namespace: microservice3
  labels:
    app: microservice3
    project: telstra
spec:
  selector:
    app: microservice3
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
